fix "aery.practice.order.core cannot" access unnamed module "spring.core", just need requires it.